# me759-flashattention

./: .gitignore  CMakeLists.txt  README.md  final_report.tex  intermediary_report.tex
.github/workflows/: deploy-pages.yml
FinalProject/: CMakeLists.txt  README.md
FinalProject/benchmarks/: euler_flash_attn_timing.sh  euler_flash_attn_timing.slurm  run_bench.sh  run_ncu_profile.sh
FinalProject/data/results/: hbm_traffic.csv  timing.csv
FinalProject/docs/: index.html  interactive.js  main.js  style.css
FinalProject/python/: plot_results.py  reference.py
FinalProject/src/: attention_utils.cuh  flash_attention_v2.cu  flash_attention_v3_wmma.cu
benchmarks/: run_bench.sh  run_ncu_profile.sh
benchmarks/results/: hbm_traffic.csv  timing.csv
docs/: index.html  interactive.js  main.js  style.css
docs/assets/: tile_anim.css
python/: plot_results.py  reference.py
src/: attention_utils.cuh  flash_attention_v1.cu  flash_attention_v1_causal.cu  flash_attention_v2.cu  main.cu  naive_attention.cu
